Fix spacing in SignTransaction checkout layout

--- a/src/request/sign-transaction/SignTransaction.css
+++ b/src/request/sign-transaction/SignTransaction.css
@@ -1,6 +1,7 @@
 #layout-container {
     display: flex;
     flex-direction: column;
+    width: 100%;
 }
 
 /*
@@ -92,7 +93,7 @@
     font-size: 24px;
     font-weight: 300;
     text-align: left;
-    padding: 32px 32px 24px 32px;
+    margin: 32px 32px 8px 32px;
 }
 
 .layout-checkout h1 strong {
@@ -110,7 +111,7 @@
 .layout-checkout .shop-account .identicon-cover {
     position: absolute;
     left: 41px;
-    top: 9px;
+    top: 22px;
     width: 46px;
     height: 46px;
     border-radius: 12px;
@@ -124,7 +125,7 @@
 
 .layout-checkout .account {
     flex-direction: row;
-    padding: 0 32px 24px 32px;
+    padding: 13px 32px;
 }
 
 .layout-checkout .account .identicon {
@@ -147,7 +148,7 @@
 }
 
 .layout-checkout .data-section {
-    padding: 0 32px 16px 32px;
+    padding: 8px 32px;
     text-align: left;
     font-size: 16px;
     line-height: 1.3;
@@ -157,15 +158,15 @@
 .layout-checkout .sender-section {
     display: flex;
     flex-direction: column;
-    margin-top: 16px;
-    padding-bottom: 24px;
+    margin-top: 24px;
+    padding-bottom: 16px;
     background: #fafafa;
     border-top: solid 1px #f0f0f0;
     border-bottom: solid 1px #f0f0f0;
 }
 
 .layout-checkout .sender-section h2 {
-    padding: 24px 24px 32px 24px;
+    margin: 24px 24px 16px 24px;
     text-transform: uppercase;
     font-size: 14px;
     line-height: 0.86;
